# mcstats-backend

./: .env.template  .gitignore  database.sql  package-lock.json  package.json  tsconfig.json
app/: app.js  checkEnv.js  config.js  env.ts  index.ts  standalone.js  standalone.ts  types.ts
app/server/: data_collector.js  data_collector.ts  sql.js  sql.ts  utils.js  websocket.js  websocket.ts
app/server/utils/: colors.js  discord.js  discord.ts  logs.js  logs.ts  response.js  response.ts  time.js  time.ts  utils.js  utils.ts
mc-ping-json/: Cargo.toml
mc-ping-json/src/: main.rs
src/: app.controller.ts  app.module.ts  app.service.ts  init_db.sh  main.ts  types.ts  validateEnv.ts
src/app/: app.controller.ts  app.gateway.ts  app.module.ts  types.ts
src/cli/: cli.module.ts  exectutor.ts  main.ts
src/cli/args/: args.ts  types.ts
src/cli/migrate/: migrate.ts  types.ts
src/database/: db.service.ts  implemtations.service.ts
src/entities/: logtime_history.entity.ts  logtime_players.entity.ts  players_online.entity.ts  server_uptime.entity.ts
src/entities/history/: history_players_logtime.entity.ts  history_players_online.entity.ts
src/env/: check.ts  validate.ts
src/fetchers/: bedrock.ts  java.ts  players.ts  types.ts
src/middlewares/: time.middleware.ts
src/services/: app.service.ts  charts.service.ts  db.service.ts  mojangUUID.service.ts  scrapper.service.ts  types.ts
src/utils/: colors.ts  controllersLoader.ts  controllers_loader.ts  init_db.ts  module_loader.ts  skip_error.ts  time.ts  utils.ts  validateEnv.ts
(+3 files in other folders)
