[package]
name = "shalyuping"
version = "1.0.0"
authors = ["Jorun <contact@jorun.dev>"]
edition = "2021"
readme = "README.md"
description = "Stalking is fun, actually"

[[bin]]
path = "src/main.rs"
name = "shalyuping"

[dependencies]
async-minecraft-ping = "0.8"
tokio = { version = "1.17", features = ["macros", "rt"] }
mc-legacy-formatting = "0.3.1"
serde = "1.0.137"
serde_json = "1.0.81"
